--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="header__slogan">
-                    <h1 class="h__slogan--title"> Une acquisition en toute confiance </h1>
+                    <h1 class="h__slogan--title"> Ken c'est un mec cheucheu </h1>
                     <a href="" class="h__slogan--btn">Catalogue</a>
                 </div>
             </div>
