--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <link rel="stylesheet" href="public/css/base.css">
         <link rel="stylesheet" href="public/css/header.css">
+        <link rel="stylesheet" href="public/css/articles.css">
     </head>
 
     <body>
@@ -40,6 +41,23 @@
                     <a href="" class="h__slogan--btn">Catalogue</a>
                 </div>
             </div>
+        </div>
+
+        <div class="articles">
+           <div class="container">
+            <h2 class="articles__title">Articles</h2>
+            <div class="articles__items">
+                <div class="articles">
+
+                </div>
+                <div class="articles">
+    
+                </div>
+                <div class="articles">
+                    
+                </div>
+            </div>
+           </div>
         </div>
         <script
             src="https://code.jquery.com/jquery-3.5.0.min.js"
