--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <div class="header__slogan">
-                    <h1 class="h__slogan--title"> Paulo c'est un pd </h1>
+                    <h1 class="h__slogan--title"> Sousou le halouf </h1>
                     <a href="" class="h__slogan--btn">Catalogue</a>
                 </div>
             </div>
