--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             </div>
         </div>
 
-        <div class="articles">
+        <div class="article">
            <div class="container">
             <h2 class="articles__title">Articles</h2>
             <div class="articles__items">
-                <div class="articles">
+                <div class="articles" style="background: url('public/img/clio.jpg');">
 
                 </div>
                 <div class="articles">
