--- a/article1.html
+++ b/article1.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="header__slogan">
                     <h1 class="h__slogan--title"> Audi </h1>
-                    <a href="file:///C:/Users/msi/Desktop/site%20web/index.html" class="h__slogan--btn">Retour</a>
+                    <a href="file:///C:/Users/msi/Desktop/site%20web/index.html" class="h__slogan--btn"><i class="fas fa-chevron-left"></i> Retour</a>
                 </div>
             </div>
             
