--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             <div class="container">
              <h2 class="articles__title">Articles</h2>
              <div class="articles__items">
-                 <div class="articles" style="background: url('public/img/audi.jpg'); background-size: cover;">
+                 <a href="file:///C:/Users/msi/Desktop/site%20web/article1.html" class="articles" style="background: url('public/img/audi.jpg'); background-size: cover;">
                      <div class="articles__filter"></div>
                      <div class="articles__name"> Audi </div>
-                 </div>
+                 </a>
                  <div class="articles" style="background: url('public/img/bmw.jpg'); background-size: cover;">
                      <div class="articles__filter"></div>
                      <div class="articles__name"> BMW </div>
